# CS2001-Data-Structures

./: CMakeLists.txt  Makefile  README.md  dictionary.cpp  dictionary.h  hashmap.cpp  speller  speller.cpp
Dictionary_lib/: CMakeLists.txt  dictionary.cpp  dictionary.h
HashMap_lib/: CMakeLists.txt  hashmap.h
texts/: test.txt
